ui/views/window/dialog_delegate.h
@@ -143,7 +143,6 @@ class VIEWS_EXPORT DialogDelegateView : public DialogDelegate,
   View* GetContentsView() override;
 
   // Overridden from View:
-  void GetAccessibleNodeData(ui::AXNodeData* node_data) override;
   void ViewHierarchyChanged(
       const ViewHierarchyChangedDetails& details) override;
 
